--- a/styles.css
+++ b/styles.css
@@ -1,270 +1,221 @@
-/* GLOBAL*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
+
+body {
+    background-color: rgb(231, 239, 245);
+}
+
 :root {
+    --green: rgb(154, 245, 63);
     --dark-blue: #363f5f;
-    --green: #49aa26;
     --light-green: #3dd705;
     --red: #e92929;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background:#f0f2f5;
-    font-family: 'Poppins', sans-serif;
-}
-
-.container {
-    width: min(90vw, 600px);
-    margin: auto;
+header {
+    background-color: var(--green);
+    padding: 3rem;
 }
 
 html {
     font-size: 93.75%;
 }
 
-/* TITLES */
-h2 {
+/* h2 {
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
     color: var(--dark-blue);
 
     font-weight: normal;
-}
-
-/* HEADER */
-header {
-    background-color: #2d4a22;
-    padding: 2rem 0 10rem;
-    text-align: center;
-}
+} */
 
 #logo {
-    color: #fff;
-    font-weight: 100;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+
+    /* background: -webkit-linear-gradient(rgb(18, 22, 18), rgb(156, 201, 156));
+    background-clip: text; */
+    /* -webkit-text-fill-color: transparent; */
 }
 
-/* BALANCE */
-#balance {
-    margin-top: -8rem;
-}
-#balance h2 {
-    color: #fff;
-    margin-top: 0;
-}
-
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
+.container-main {
+    width: min(50vw, 600px);
+    margin: auto;
+    
+    /*border: solid 1px black;*/
+    
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem; */
 }
 
 /* CARDS */
-
-.images {
-    width: 20%;
+.image-card {
+    width: 30px;
 }
 
-/* BUTTONS AND LINKS*/
-a {
-    color: var(--green);
-    text-decoration: none;
+.imgTable img {
+    padding-left: 2rem;
+    width: 30%;
 }
 
-a:hover {
-    color: var(--light-green);
-}
-
-button {
-    width: 100%;
-    height: 50px;
-
-    border: none;
-
-    color: white;
-    background: var(--green);
-
-    padding: 0;
-    border-radius: 0.25rem;
-
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: var(--light-green);
-}
-
-.button.new {
-    /*display: block;*/
-    display: inline-block;
-    margin-bottom: .8rem;
-}
-
-.button.cancel {
-    color: var(--red);
-    border: 2px var(--red) solid;
-    border-radius: 0.25rem;
-
-    height: 50px;
- 
+section#values {
     display: flex;
-    align-items: center;
     justify-content: center;
 
-    opacity: 0.6;
-}
-
-.button.cancel:hover {
-    background: lightcoral;
+    /* border: solid 1px black; */
 }
 
 div.card {
     background-color: white;
-    padding: 1.5rem 2rem;
-    border-radius: 0.25rem;
-
+    
+    padding: 1.5rem 1rem;
     margin-bottom: 2rem;
-    color: var(--dark-blue);
+    margin-top: 2rem;
+
+    border-radius: 0.25rem;   
+    border: solid 1px;
+
+    width: 100%;
 }
 
-div.card h3{
-    font-weight: normal;
-    font-size: 1rem;
+div.card h3 {
+    font-size: 2rem;
+    font-weight: 400;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    /*border: solid 1px black;*/
 }
 
 div.card p {
-    font-size: 1.5rem;
-    line-height: 3rem;
+    font-size: 1.3rem;
+    font-weight: 200;
 
-    margin-top: 1rem;
+    text-align: left;
+
+    margin-top: 2rem;
+
+    display: inline-flex;
 }
 
- div.card.total {
-    background-color: var(--green);
- }
- 
- /* TABLE */
- #data-table {
+div.card span {
+    font-size: 1.3rem;
+    font-weight: 200;
+
+    text-align: left;
+}
+
+/* TABLE */
+#data-table {
     display: block;
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969cb3;
 
     overflow-x: auto;
-}
-
-table thead tr th:first-child, 
-table tbody tr td:first-child {
-    border-radius: 0.25rem 0 0 0.25rem;
-}
-
-table thead tr th:last-child, 
-table tbody tr td:last-child {
-    border-radius: 0 0.25rem 0.25rem 0;
-}
-
-table thead th {
-    background: white;
     
-    font-weight: normal;
-    padding: 1rem 4rem;
+    margin-bottom: 2rem;
+}
 
+#data-table thead th,
+#data-table tbody td {  
+    width: 100vw;
+    
+    padding: 1rem 1rem;
     text-align: left;
-   
-    /*opacity: 0.6;*/
+
+    /*border: 1px solid black;*/
+}
+
+thead th {
+    font-size: 2rem;
+    
+    /* background: -webkit-linear-gradient(rgb(18, 22, 18), rgb(156, 201, 156));
+    background-clip: text; */
+    /* -webkit-text-fill-color: transparent; */
+}
+
+#data-table td {
+    font-size: 1.2rem;
+    color: black;
+
+    background-color: white;
+}
+
+#data-table td:first-child {
+    border-radius: 1rem 0 0 1rem;
+}
+
+#data-table td:last-child {
+    border-radius: 0 1rem 1rem 0;
+}
+
+#data-table td.description {
+    text-align: left;
 }
 
 table tbody tr {
-    opacity: 0.7;
+    opacity: 0.6;
 }
 
 table tbody tr:hover {
-    opacity: 1.5;
-}
-
-table tbody td {
-    background: white;
-    padding: 1rem 2rem; 
-    text-align: left;
-}
-
-td.description {
-    color: var(--dark-blue);
-}
-
-td.income {
-    color: #12a454;
-}
-
-td.expense {
-    color: #e92929;
-}
-
-td.imgTable {
-    text-align: center;
-}
-
-td.imgTable img{
-    width: 30%;
-}
-
-td.extra {
-    color: blue;
-    text-align: center;
-}
-
-/* MODAL */
-.modal-overlay {
-    width: 100%;
-    height: 100%;
-
-    background: rgba(0, 0, 0, .7);
-
-    position: fixed;
-    top: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    opacity: 0;
-    visibility: hidden;
-}
-
-.active {
     opacity: 1;
-    visibility: visible;
 }
 
-.modal {
-    background: #f0f2f5;
-    padding: 2.4rem;
-    /*position: relative;*/
-    
-    /*width: 90%;
-    max-width: 500px;*/
+/* LINKS */
+.transaction a {    
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: var(--green);
 }
+
+.transaction a:hover {
+    color: rgb(84, 133, 84);
+}
+
+/* .transaction a.a-link {
+    display: inline-block;
+} */
 
 /* FORM */
-#form {
-    max-width: 500px;
+div#form {
+    width: 96%;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
-#form h2 {
-    margin-top: 0;
+div.title h1 {
+    color: var(--green);
+    text-align: center;
+    margin-top: 8rem;
+}
+
+.test {
+    display: none;
+    /*visibility: hidden;*/
+}
+
+/* ClASS ACTIVE DIV#FORM */
+.active {
+    display: initial;
+    /*visibility: visible;*/
+} 
+
+div.input-group label {
+    font-size: 2rem;
+
+    width: 100%;
+    
+    /* background: -webkit-linear-gradient(rgb(18, 22, 18), rgb(156, 201, 156));
+    background-clip: text; */
+    /* -webkit-text-fill-color: transparent; */
 }
 
 input {
@@ -290,19 +241,53 @@ input {
     align-items: center;
 }
 
-.input-group.actions .button,
-.input-group.actions button {
-    width: 48%;
+.input-group small {
+    font-size: 1.3rem;
 }
 
- /* FOOTER */
-footer {
-    text-align: center;
-    padding: 4rem 0 3rem;
-    color: var(--dark-blue);
+/* BUTTONS */
+.input-group.actions button.save {
+    width: 45%;
+    height: 50px;
+
+    border: none;
+
+    color: white;
+    background: var(--green);
+    border-radius: 0.25rem;
+    
+    display: flex;
+    align-items: center ;
+    justify-content: center;
+
+    cursor: pointer;
+}
+
+.input-group.actions button.save:hover {
+    background-color: var(--light-green);
+}
+
+button.cancel {
+    color: red;
+    border: 2px red solid;
+    border-radius: 0.25rem;
+
+    width: 45%;
+    height: 50px;
+
+    cursor: pointer;
+ 
+    display: flex;
+    align-items: center ;
+    justify-content: center;
 
     opacity: 0.6;
 }
+
+button.cancel:hover {
+    background: lightcoral;
+}
+
 
 /* RESPONSIVE */
 @media (min-width: 800px){
@@ -310,17 +295,20 @@ footer {
         font-size: 87.5%;
     }
 
-    #balance {
+    /* #values {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
+        gap: 2rem; // qdo eram 3 cards
+    } */ 
+
+    div.card {
+        width: 30vw;
     }
 
-    /*.imgTable {
-        width: 100%;
-    } */
-    
-   footer {
-       visibility: hidden;
-   }
-} 
+    .transaction a {
+        text-decoration: none;
+        font-size: 1.5rem;
+        
+        margin-left: 1rem;
+    }
+}
